--- a/Diseño/Contenedor_flex/index.html
+++ b/Diseño/Contenedor_flex/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contenedores flex</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css"><!--cpnexion con css-->
 </head>
 <body>
     <div class="container">
