--- a/Diseño/Ejercicio Flex Base/ejercicio.html
+++ b/Diseño/Ejercicio Flex Base/ejercicio.html
@@ -15,7 +15,7 @@
   <body>
     <div class="container">
       <header>
-        <h1>Ejemplo de Maquetación con Grid</h1>
+        <h1>Ejemplo de Maquetación con Flex</h1>
         <h4>By @pekechis para @openwebinars</h4>
       </header>
       <div class="content_wrapper">
