--- a/Diseño/Ejercicio_flex/index.html
+++ b/Diseño/Ejercicio_flex/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div class="contenedor">
 
     <header class="header">
         <div class="logo"><img src="imagenes/css.svg" class="imgcss">Flexbox</div>
@@ -22,12 +23,19 @@
         <section class="text-content">
             <article class="text-block">
                 <h1>Lorem ipsum dolor sit amet.</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam quasi corporis earum, facere exercitationem consectetur provident dolore quas amet aliquid expedita facilis maxime optio blanditiis, fuga explicabo! Ea, est vel.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Numquam quasi corporis earum, facere exercitationem 
+                    consectetur provident dolore quas amet aliquid expedita 
+                    facilis maxime optio blanditiis, fuga explicabo! Ea, est vel.
+                </p>
             </article>
             <hr>
             <article class="text-block">
                 <h1>Lorem ipsum dolor sit amet.</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe recusandae vel quasi atque placeat expedita soluta id corrupti sapiente maiores optio unde facere deleniti quae voluptatum, harum repudiandae eos tenetur?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Saepe recusandae vel quasi atque placeat expedita soluta 
+                    id corrupti sapiente maiores optio unde facere deleniti 
+                    quae voluptatum, harum repudiandae eos tenetur?</p>
             </article>
         </section>
         <aside class="image-content">
@@ -39,6 +47,6 @@
     <footer class="footer">
         <p>Contacto</p>
     </footer>
-
+</div>
 </body>
 </html>
