--- a/Diseño/Ejercicio_flex/index.html
+++ b/Diseño/Ejercicio_flex/index.html
@@ -10,7 +10,10 @@
     <div class="contenedor">
 
     <header class="header">
-        <div class="logo"><img src="imagenes/css.svg" class="imgcss">Flexbox</div>
+        <div class="logo"><img src="imagenes/css.svg" class="imgcss">
+            Flexbox
+        </div>
+        
         <nav class="nav">
             <a href="#">Inicio</a>
             <a href="#">Blog</a>
@@ -22,7 +25,7 @@
     <main class="main-content">
         <section class="text-content">
             <article class="text-block">
-                <h1>Lorem ipsum dolor sit amet.</h1>
+                <h2>Lorem ipsum dolor sit amet.</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Numquam quasi corporis earum, facere exercitationem 
                     consectetur provident dolore quas amet aliquid expedita 
@@ -31,7 +34,7 @@
             </article>
             <hr>
             <article class="text-block">
-                <h1>Lorem ipsum dolor sit amet.</h1>
+                <h2>Lorem ipsum dolor sit amet.</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Saepe recusandae vel quasi atque placeat expedita soluta 
                     id corrupti sapiente maiores optio unde facere deleniti 
@@ -39,14 +42,24 @@
             </article>
         </section>
         <aside class="image-content">
-            <div class="image-box"><img  src="imagenes/gatos1.png" class="gatos1"></div>
-            <div class="image-box"><img  src="imagenes/gatos2.png" class="gatos2"></div>
+            <div class="image-box">
+                <img  src="imagenes/gatos1.png" class="gatos1">
+            </div>
+            <div class="image-box">
+                <img  src="imagenes/gatos2.png" class="gatos2">
+            </div>
         </aside>
     </main>
 
     <footer class="footer">
+        <div>
         <p>Contacto</p>
-    </footer>
+        </div>
+        <div class="social">
+            <img src="img/facebook.jpg" alt="icono facebook"/>
+            <img src="img/twitter.jpg" alt="icono twitter"/>
+          </div>
+      </footer>
 </div>
 </body>
 </html>
