--- a/Diseño/Ejercicio_flex/index.html
+++ b/Diseño/Ejercicio_flex/index.html
@@ -10,8 +10,9 @@
     <div class="contenedor">
 
     <header class="header">
-        <div class="logo"><img src="imagenes/css.svg" class="imgcss">
-            Flexbox
+        <div class="logo">
+            <img src="imagenes/css.svg" class="imgcss">
+            <a>Flexbox</a>
         </div>
         
         <nav class="nav">
@@ -56,8 +57,8 @@
         <p>Contacto</p>
         </div>
         <div class="social">
-            <img src="img/facebook.jpg" alt="icono facebook"/>
-            <img src="img/twitter.jpg" alt="icono twitter"/>
+            <img src="imagenes/facebook.jpg" alt="icono facebook"/>
+            <img src="imagenes/twitter.jpg" alt="icono twitter"/>
           </div>
       </footer>
 </div>
