--- a/Diseño/Ejercicio_Grid/index.html
+++ b/Diseño/Ejercicio_Grid/index.html
@@ -16,7 +16,7 @@
         <header>
             <div class="logo">
                 <img src="img/logo.png" alt="Logo CSS3">
-                <a >Flexbox </a>
+                <a >GRID </a>
             </div>
 
             <nav>
