--- a/Diseño/Aisha_JuanAracil_Tarea_practica_1_eva/index.html
+++ b/Diseño/Aisha_JuanAracil_Tarea_practica_1_eva/index.html
@@ -65,22 +65,22 @@
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt nobis hic excepturi tempore, corporis repellendus possimus deleniti numquam, enim, porro odit libero animi ratione.
             </div>
             <!-- Imagen del producto a la derecha -->
-            <img src="img/botella_webinar.jpg" alt="Botella de cerveza" class="right-bottle" />
+            <img src="imagenes/botella_webinar.jpg" alt="Botella de cerveza" class="right-bottle" />
         </section>
 
         <!-- Galería de imágenes centrada -->
         <section class="galeria">
-            <img src="img/cerveza.jpg" alt="Botella de cerveza 2" />
-            <img src="img/cerveza.jpg" alt="Botella de cerveza 2" />
-            <img src="img/cerveza.jpg" alt="Botella de cerveza 2" />
-            <img src="img/cerveza.jpg" alt="Botella de cerveza 2" />
+            <img src="imagenes/cerveza.jpg" alt="Botella de cerveza 2" />
+            <img src="imagenes/cerveza.jpg" alt="Botella de cerveza 2" />
+            <img src="imagenes/cerveza.jpg" alt="Botella de cerveza 2" />
+            <img src="imagenes/cerveza.jpg" alt="Botella de cerveza 2" />
         </section>
     </div>
 
     <!-- Barra lateral fija a la izquierda -->
     <div class="lateral">
         <!-- Imagen lateral -->
-        <img src="img/profile.png" alt="Nueva imagen" />
+        <img src="imagenes/profile.png" alt="Nueva imagen" />
         <div class="menu-item">Inicio</div>
         <div class="menu-item">Catálogo</div>
         <div class="menu-item">Quiénes somos</div>
@@ -97,9 +97,9 @@
         </address>
         <!-- Sección de redes sociales -->
         <section class="redes-sociales">
-            <img src="img/facebook.jpg" alt="Facebook" />
-            <img src="img/twitter.jpg" alt="Twitter" />
-            <img src="img/snapchat.jpg" alt="Snapchat" />
+            <img src="imagenes/facebook.jpg" alt="Facebook" />
+            <img src="imagenes/twitter.jpg" alt="Twitter" />
+            <img src="imagenes/snapchat.jpg" alt="Snapchat" />
         </section>
     </footer>
 </body>
