--- a/Diseño/Proyecto_Global/index.html
+++ b/Diseño/Proyecto_Global/index.html
@@ -54,10 +54,20 @@
                     </div>
                     <div class="fiesta">
                         <img src="img/fiesta2.jpg" alt="fiesta_callejera">
-                        <h3>Fiesta del Café</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non quam metus.</p>
-                    </div>
-                </div>
+                        <h3>Blocos de Flamengo</h3>
+                        <p>
+                            El barrio de Flamengo en Río de Janeiro no solo es famoso por el fútbol, sino también por su vibrante Carnaval, que ofrece una variedad de bloques temáticos para todos los gustos:
+                            <ul>
+                                <li><strong>Amigos da Onça:</strong> Fiesta con arte, percusión y danza, con ritmos variados. Desfila el 10/02 a las 7 a.m.</li>
+                                <li><strong>Cachorro Cansado:</strong> El bloque más tradicional del barrio, activo desde 1975. Desfila el 13/02 a las 10 a.m.</li>
+                                <li><strong>Estica do Flamengo:</strong> Con su poderosa batería Pura Energia, garantiza movimiento desde 2007. Desfila el 12/02 a las 2 p.m.</li>
+                                <li><strong>Sargento Pimenta:</strong> Combina música de los Beatles con ritmos brasileños en un show único. Desfila el 12/02 a las 10 a.m.</li>
+                                <li><strong>Bagunça Meu Coreto:</strong> Nacido en 2005, mezcla sambas y marchinhas desde la Plaza São Salvador hasta Flamengo. Desfila el 13/02 a las 9 a.m.</li>
+                                <li><strong>Sereias da Guanabara:</strong> Un bloque inclusivo y seguro para el público LGBT. Desfila el 13/02 a las 3 p.m.</li>
+                                <li><strong>Se Essa Rua Fosse Minha:</strong> Ideal para los amantes de la bohemia. Desfila el 17/02 al mediodía.</li>
+                            </ul>
+                        </p>
+                    </div>                    
             
         </main>
         
