--- a/Cliente/Trabajo/index.html
+++ b/Cliente/Trabajo/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +15,7 @@
         </nav>
     </header>
     <main>
-        <!-- Orders Section -->
+
         <section id="orders-section" class="hidden">
             <h2>Orders</h2>
             <form id="order-form">
@@ -38,7 +38,6 @@
             </table>
         </section>
 
-        <!-- Pieces Section -->
         <section id="pieces-section" class="hidden">
             <h2>Pieces</h2>
             <form id="piece-form">
@@ -69,8 +68,8 @@
             </table>
         </section>
     </main>
-    <script src="js/app.js"></script>
-    <script src="js/orders.js"></script>
-    <script src="js/pieces.js"></script>
+    <script src="app.js"></script>
+    <script src="orders.js"></script>
+    <script src="pieces.js"></script>
 </body>
 </html>
