--- a/Cliente/Trabajo/index.html
+++ b/Cliente/Trabajo/index.html
@@ -15,7 +15,6 @@
         </nav>
     </header>
     <main>
-        <!-- Sección de Pedidos -->
         <section id="seccion-pedidos" class="oculto">
             <h2>Pedidos</h2>
             <form id="formulario-pedidos">
@@ -38,7 +37,6 @@
             </table>
         </section>
 
-        <!-- Sección de Piezas -->
         <section id="seccion-piezas" class="oculto">
             <h2>Piezas</h2>
             <form id="formulario-piezas">
@@ -69,8 +67,8 @@
             </table>
         </section>
     </main>
-    <script src="js/app.js"></script>
-    <script src="js/pedidos.js"></script>
-    <script src="js/piezas.js"></script>
+    <script src="app.js"></script>
+    <script src="pedidos.js"></script>
+    <script src="piezas.js"></script>
 </body>
 </html>
