--- a/Diseño/Proyecto_Global/index.html
+++ b/Diseño/Proyecto_Global/index.html
@@ -48,7 +48,7 @@
                 <br>
                 <div class="fiestas-callejeras">
                     <div class="fiesta">
-                        <img src="img/fiesta1.jpg" alt="fiesta_latas">
+                        <img src="img/fiesta1.jpg" alt="fiesta_latas" style="height: 271px;">
                         <h3>Bloco da Latinha</h3>
                         <p>
                             En la ciudad de Madre de Deus, en el estado de Bahía, Brasil, el "Bloco da Latinha" es una fiesta callejera única que se celebra durante el Carnaval. Este evento destaca por sus trajes elaborados con cientos de latas de aluminio recicladas, recolectadas y limpiadas durante meses. Cada traje, conocido como “pierro,” se confecciona con alrededor de 1,600 latas, uniendo creatividad y conciencia ambiental.  
