--- a/Cliente/Trabajo/2/indice.html
+++ b/Cliente/Trabajo/2/indice.html
@@ -9,8 +9,8 @@
     
     <nav>
         <ul>
-            <li><a href="pedidos.html">Gestión de Pedidos</a></li>
-            <li><a href="piezas.html">Gestión de Piezas</a></li>
+            <li><a href="pedidos/pedidos.html">Gestión de Pedidos</a></li>
+            <li><a href="piezas/piezas.html">Gestión de Piezas</a></li>
             <li><a href="detalles-pedido.html">Detalles de Pedido</a></li>
         </ul>
     </nav>
