--- a/Cliente/Trabajo/2/pedidos/pedidos.html
+++ b/Cliente/Trabajo/2/pedidos/pedidos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Gestión de Pedidos - MaderAvilés</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 </head>
 <body class="bg-gray-100 p-8">
     <div class="container mx-auto">
