--- a/Diseño/Proyecto_Global/index.html
+++ b/Diseño/Proyecto_Global/index.html
@@ -74,7 +74,22 @@
                                 <li><strong>Se Essa Rua Fosse Minha:</strong> Ideal para los amantes de la bohemia. Desfila el 17/02 al mediodía.</li>
                             </ul>
                         </p>
-                    </div>                 
+                    </div>
+                    <section class="section-cristo">
+                        <h2>Cristo Redentor</h2>
+                        <br>
+                        <div class="cristo-container">
+                            <img src="img/cristo.jpg" alt="Cristo Redentor">
+                            <div class="cristo-texto">
+                                <p>
+                                    El Cristo Redentor, situado en la cima del Cerro del Corcovado en Río de Janeiro, es uno de los monumentos más emblemáticos de Brasil y del mundo. Esta estatua de 30 metros de altura, inaugurada en 1931, simboliza la paz, el amor y la apertura de Brasil hacia el mundo.
+                                </p>
+                                <p>
+                                    Rodeado de exuberantes paisajes del Parque Nacional de la Tijuca, el Cristo Redentor ofrece una vista espectacular de la ciudad, incluyendo el Pan de Azúcar, la Bahía de Guanabara y las playas de Copacabana e Ipanema. Es un destino imperdible para quienes visitan Río de Janeiro.
+                                </p>
+                            </div>
+                        </div>
+                    </section>                                 
             
         </main>
         
