--- a/Diseño/Proyecto_Global/index.html
+++ b/Diseño/Proyecto_Global/index.html
@@ -33,7 +33,7 @@
             <br>
             <section class="section-galeria">
                 <h2>Galería</h2>
-                <br>
+            
                 <div class="galeria">
                     <img src="img/img1.jpg" alt="mujer_carnaval">
                     <img src="img/img3.jpg" alt="mujeres_bailando">
@@ -47,8 +47,8 @@
             </section>
             <br>
             <section class="section-fiestas-callejeras">
-                <h2>Fiestas Callejeras</h2>
                 <br>
+                <h2>Fiestas Callejeras</h2>
                 <div class="fiestas-callejeras">
                     <div class="fiesta">
                         <img src="img/fiesta1.jpg" alt="fiesta_latas">
@@ -76,16 +76,15 @@
                         </p>
                     </div>
                     <section class="section-cristo">
-                        <h2>Cristo Redentor</h2>
-                        <br>
+                        <h3>Cristo Redentor</h3>
                         <div class="cristo-container">
                             <img src="img/cristo.jpg" alt="Cristo Redentor">
                             <div class="cristo-texto">
                                 <p>
-                                    El Cristo Redentor, situado en la cima del Cerro del Corcovado en Río de Janeiro, es uno de los monumentos más emblemáticos de Brasil y del mundo. Esta estatua de 30 metros de altura, inaugurada en 1931, simboliza la paz, el amor y la apertura de Brasil hacia el mundo.
-                                </p>
-                                <p>
-                                    Rodeado de exuberantes paisajes del Parque Nacional de la Tijuca, el Cristo Redentor ofrece una vista espectacular de la ciudad, incluyendo el Pan de Azúcar, la Bahía de Guanabara y las playas de Copacabana e Ipanema. Es un destino imperdible para quienes visitan Río de Janeiro.
+                                    El Cristo Redentor, situado en la cima del Cerro del Corcovado en Río de Janeiro, es uno de los monumentos más emblemáticos de Brasil y del mundo. 
+                                    Esta estatua de 30 metros de altura, inaugurada en 1931, simboliza la paz, el amor y la apertura de Brasil hacia el mundo.
+                                    Rodeado de exuberantes paisajes del Parque Nacional de la Tijuca, el Cristo Redentor ofrece una vista espectacular de la ciudad, incluyendo el Pan de Azúcar, la Bahía de Guanabara y las playas de Copacabana e Ipanema. 
+                                    Es un destino imperdible para quienes visitan Río de Janeiro.
                                 </p>
                             </div>
                         </div>
