--- a/Diseño/Proyecto_Global/index.html
+++ b/Diseño/Proyecto_Global/index.html
@@ -11,7 +11,7 @@
 
         <header class="header">
             <div class="logo">
-                <img src="img/logo.svg" class="img">
+                <img src="img/logo.png" class="img">
                 <a>Brazilian Carnival</a>
             </div>
             
@@ -75,6 +75,8 @@
                             </ul>
                         </p>
                     </div>
+                    </div>
+                    </section>
                     <section class="section-cristo">
                         <h3>Cristo Redentor</h3>
                         <div class="cristo-container">
