--- a/Cliente/Examen_Vuelos/index.html
+++ b/Cliente/Examen_Vuelos/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vuelos</title>
-    <script src="persona.js" defer></script>
-    <script src="calculoIMC.js" defer></script>
+    <title>FlightEX</title>
+    <script src="vuelo.js" defer></script>
+    <script src="vueloMuyRentable.js" defer></script>
     <script src="app.js" defer></script>
 </head>
 <body>
@@ -17,12 +17,12 @@
         <input type="number" id="plazas" />
         <label for="importe">Importe: </label>
         <input type="number" step="0.01" id="importe" />
-        <button onclick="añadirPersona()">Añadir</button>
-        <button onclick="modificarPersona()">Modificar</button>
+        <button onclick="aniadirVuelo()">Añadir</button>
+        <button onclick="modificarVuelo()">Modificar</button>
         <button onclick="calcularIMC()">Calcular</button>
     </div>
 
-    <h2>Resultados</h2>
+    <h2>Lista de Vuelos</h2>
     <div id="resultados"></div>
 </body>
 </html>
