--- a/Cliente/Examen_Vuelos/index.html
+++ b/Cliente/Examen_Vuelos/index.html
@@ -19,7 +19,7 @@
         <input type="number" step="0.01" id="importe" />
         <button onclick="aniadirVuelo()">Añadir</button>
         <button onclick="modificarVuelo()">Modificar</button>
-        <button onclick="calcularIMC()">Calcular</button>
+        <button onclick="calcularVuelo()">Calcular</button>
     </div>
 
     <h2>Lista de Vuelos</h2>
