--- a/Cliente/Examen_Vuelos/index.html
+++ b/Cliente/Examen_Vuelos/index.html
@@ -23,6 +23,10 @@
     </div>
 
     <h2>Lista de Vuelos</h2>
+
+    <ul id="vuelos">
+        
+    </ul>
     <div id="resultados"></div>
 </body>
 </html>
