--- a/Cliente/Examen_Vuelos/index.html
+++ b/Cliente/Examen_Vuelos/index.html
@@ -23,10 +23,17 @@
     </div>
 
     <h2>Lista de Vuelos</h2>
-
-    <ul id="vuelos">
-        
-    </ul>
+    <table>
+        <thead>
+        <tr>
+        <th>Codigo</th>
+        <th>Plazas</th>
+        <th>Importe</th>
+        </tr>
+        </thead>
+        <tbody id="vuelos">
+        </tbody>
+        </table>
     <div id="resultados"></div>
 </body>
 </html>
