--- a/Cliente/Examen_Vuelos/indeXx.html
+++ b/Cliente/Examen_Vuelos/indeXx.html
@@ -4,40 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FlightEX</title>
-    <script src="vuelo.js" defer></script>
-    <script src="vueloMuyRentable.js" defer></script>
-    <script src="app.js" defer></script>
+    <script src="app1.js" defer></script>
+
 </head>
-<body>
+<body onload="cargarVuelos()">
     <h1>Vuelos</h1>
     <div>
-        <label for="codigo">Codigo: </label>
+        <label for="codigo">Código: </label>
         <input type="text" id="codigo" />
-        <label for="plazas">Nº de plazas </label>
+        <label for="plazas">Nº de plazas: </label>
         <input type="number" id="plazas" />
         <label for="importe">Importe: </label>
         <input type="number" step="0.01" id="importe" />
         <button onclick="aniadirVuelo()">Añadir</button>
-        <!--Que una vez añadido se muestre en Lista de Vuelos-->
         <button onclick="modificarVuelo()">Modificar</button>
-        <!--Poder modificar un vuelo y que se muestre en Lista de Vuelos-->
         <button onclick="calcularVuelo()">Calcular</button>
-        <!--Poder calcular el importe y que se muestre en Lista de Vuelos-->
+        <button onclick="mostrarMuyRentables()">Mostrar Muy Rentables</button>
     </div>
-
     <h2>Lista de Vuelos</h2>
-    <!-- Mostrar los vuelos añadidos, modificados y con el calculo hecho o no-->
     <table>
         <thead>
-        <tr>
-        <td>Codigo</td>
-        <td>Plazas</td>
-        <td>Importe</td>
-        </tr>
+            <tr>
+                <td>Código</td>
+                <td>Plazas</td>
+                <td>Importe</td>
+            </tr>
         </thead>
-        <tbody id="vuelos">
-        </tbody>
-        </table>
+        <tbody id="vuelos"></tbody>
+    </table>
     <div id="resultadosvuelos"></div>
 </body>
 </html>
