--- a/Diseño/AishaJuanAracilProenza_UT1_ProyectoGlobal/index.html
+++ b/Diseño/AishaJuanAracilProenza_UT1_ProyectoGlobal/index.html
@@ -24,6 +24,10 @@
         </header>
         
         <main class="main-content">
+            <section class="section-imagen-principal">
+                <img src="img/carnaval-grande.jpg" alt="Carnaval de Brasil">
+            </section>
+            
             <section class="section-text">
                 <h1><strong>¡Bienvenido al Carnaval de Brasil!</strong></h1>
                     <p>Descubre la magia, la alegría y la pasión de una de las celebraciones más vibrantes del mundo. El Carnaval de Brasil no es solo una fiesta, es una experiencia que une música, danza, colores y tradición en un espectáculo inolvidable. Desde los desfiles de samba en Río de Janeiro hasta las festividades callejeras en Salvador y Recife, cada rincón del país se llena de vida y energía contagiosa.
